<resources>
    <string name="app_name">Soundboard</string>
    <string name="quando_c_gi_un_suono_in_riproduzione">Se c\'è già un suono in riproduzione…</string>
    <string name="hope">Hope</string>
    <string name="meh">Meh</string>
    <string name="eau">Eau</string>
    <string name="e_che_devi_fare">E che devi fare?</string>
    <string name="eci">Eci</string>
    <string name="b6">Nnòh</string>
    <string name="b7">I delfini</string>
    <string name="b8">Gli elefanti</string>
    <string name="b9">I treni</string>
    <string name="b10">Le nuvole</string>
    <string name="b11">E tu?</string>
    <string name="b12">Dove vai a ballare?</string>

</resources>